# RealtimeRendering16W

./: .gitignore  CMakeLists.txt  README.md  buildscript
CMakeModules/: FindAssimp.cmake  FindFreeImage.cmake
cmake/: ArchBitSize.cmake  FindAssimp.cmake  FindFreeImage.cmake  FindFreeImagePlus.cmake
docs/: CMakeLists.txt
docs/api/: Doxyfile.in
lib/glfwpp/: .gitattributes  .gitignore  CMakeLists.txt  README.rst
lib/glfwpp/cmake/: FindGLFW.cmake
lib/glfwpp/examples/: run.cpp
lib/glfwpp/include/: glfwpp.hpp
lib/glfwpp/include/glfwpp/: application.hpp  common.hpp  time.hpp  window.hpp
lib/glfwpp/src/: CMakeLists.txt  application.cpp  common.cpp  time.cpp  window.cpp
src/: CMakeLists.txt  camera.cpp  camera.h  eagle.cpp  eagle.h  geometry.cpp  geometry.h  light.cpp  light.h  main.cpp  player.cpp  player.h  sceneobject.cpp  sceneobject.h  sceneobject.hpp  shader.cpp  shader.h  surface.cpp  surface.h  textrenderer.cpp  textrenderer.h  texture.cpp  texture.h  texture.hpp
src/effects/: lightbeams_effect.cpp  lightbeams_effect.h  particlesystem.cpp  particlesystem.h  skybox_effect.cpp  skybox_effect.h  ssao_effect.cpp  ssao_effect.h  ssaopostprocessor.cpp  ssaopostprocessor.h  water_effect.cpp  water_effect.h
src/shaders/: blur.frag  blur.vert  blur_vsm.frag  blur_vsm.vert  depth_shader.frag  depth_shader.vert  depth_shader_vsm.frag  depth_shader_vsm.vert  flat_singlecolor.frag  flat_singlecolor.vert  lightbeams.frag  lightbeams.vert  normal_mapping.frag  normal_mapping.vert  particles.frag  particles.vert  quad_debug.frag  quad_debug.vert  skybox.frag  skybox.vert  ssao.frag  ssao.vert  text.frag  text.vert  textured_blinnphong.frag  textured_blinnphong.vert  water.frag  water.vert
